Fix theme switch a11y contrast

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -6,7 +6,7 @@
 
 .dark {
   background-color: rgb(137, 120, 153);
-  color: rgb(200, 190, 224);
+  color: rgb(255, 255, 255);
 
   .analysis__item {
     background-color: rgb(118, 89, 146);
